prevent top of page getting cut off

--- a/public/style.css
+++ b/public/style.css
@@ -5,12 +5,14 @@ html, body {
 .container {
     position: relative;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-20%);
     text-align: center;
+    min-height: 100%;
 }
 
 .card-deck {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: .5rem;
+    min-height: 100%;
 }
